# ChangeLog for media-video/2mandvd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/2mandvd/ChangeLog,v 1.32 2013/08/31 08:27:16 pesa Exp $

*2mandvd-1.8.5 (31 Aug 2013)

  31 Aug 2013; Davide Pesavento <pesa@gentoo.org> +2mandvd-1.8.5.ebuild,
  +files/2mandvd-1.8.5-libavformat54.patch,
  -files/2mandvd-fix-const-char-concatenation.patch:
  Version bump.

  17 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org> -2mandvd-1.8.1.ebuild,
  2mandvd-1.8.4.ebuild, files/2mandvd-1.8.4-libavformat54.patch:
  Fix usage of more deprecated symbols to be happy with libav9. Just append the
  diff to current libavformat53 patch.

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> 2mandvd-1.8.1.ebuild,
  2mandvd-1.8.4.ebuild:
  Move Qt dependencies to the new category

  08 Feb 2013; Alexis Ballier <aballier@gentoo.org> 2mandvd-1.8.4.ebuild,
  +files/2mandvd-1.8.4-libavformat54.patch:
  fix broken #if directive causing build failure with latest ffmpeg, bug
  #456170

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> 2mandvd-1.8.4.ebuild:
  Stable for x86, wrt bug #442166

  14 Nov 2012; <ago@gentoo.org> 2mandvd-1.8.4.ebuild:
  Stable for amd64, wrt bug #442166

*2mandvd-1.8.4 (06 Oct 2012)

  06 Oct 2012; Davide Pesavento <pesa@gentoo.org> +2mandvd-1.8.4.ebuild:
  Version bump, use upstream "make install".

  02 Aug 2012; Davide Pesavento <pesa@gentoo.org> -2mandvd-1.7.3.ebuild,
  2mandvd-1.8.1.ebuild:
  amd64/x86 stable wrt bug 429142. Remove old.

*2mandvd-1.8.1 (03 Jun 2012)

  03 Jun 2012; Markos Chandras <hwoarang@gentoo.org> +2mandvd-1.8.1.ebuild:
  Version bump

  15 Apr 2012; Johannes Huber <johu@gentoo.org> -2mandvd-1.3.5.ebuild,
  -2mandvd-1.5.5.ebuild, -files/2mandvd-fix-const-char-concatenation.old.patch:
  Remove old.

  15 Apr 2012; Markus Meier <maekke@gentoo.org> 2mandvd-1.7.3.ebuild:
  x86 stable, bug #411731

  13 Apr 2012; Agostino Sarubbo <ago@gentoo.org> 2mandvd-1.7.3.ebuild: