@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/2mandvd/2mandvd-1.8.5.ebuild,v 1.1 2013/08/31 08:27:16 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/2mandvd/2mandvd-1.8.5.ebuild,v 1.2 2015/05/10 11:47:18 pacho Exp $
 
-EAPI=4
+EAPI=5
 LANGS="cs de en it ru"
 
 inherit qt4-r2
@@ -16,10 +16,11 @@ SRC_URI="http://download.tuxfamily.org/${PN}/${MY_PN}-${PV}.tar.gz"
 LICENSE="GPL-2+"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="debug"
+IUSE="debug libav"
 
-DEPEND="media-libs/libsdl
-	virtual/ffmpeg
+DEPEND="libav? ( media-video/libav:= )
+	!libav? ( media-video/ffmpeg:0= )
+	media-libs/libsdl
 	virtual/glu
 	virtual/opengl
 	dev-qt/qtcore:4
