@@ -7,23 +7,13 @@ AUX 2mandvd-1.8.5-libavformat54.patch 819 SHA256 e4d662a31da92c83947f388cad545b1
 DIST 2ManDVD-1.8.4.tar.gz 29523342 SHA256 b74e8a62b4e396c4cbb1db2864d77c87ea45f74bb599f4f270608d9e7f91888c SHA512 2bef9b5cdda2949507855193607cf953d4127bd1fb913c7710e1d3e7753bc6ba64bf04f5b1158a500c84d798c513dd4106a1ec7b54ae5054801a1215ade7ed09 WHIRLPOOL 4af1bd075a0d21d64afb955963da90d32ba5682209a125d55b5de32690c545081be6c46cd81e33da79724790511f83c62e9a2d85a8d83de45b17cd642800554d
 DIST 2ManDVD-1.8.5.tar.gz 29525071 SHA256 19c3c02123684220e77b3baa12f37b6feb5ecb523c504c65d306c75136191873 SHA512 1e43034cab310ce0a642afdfcb2b4ddbc47b16b0f353adebd1fd2ec5f8445add41226390c6656e7cb520d9900e1b482adee7adb6f784d2fbfbaff2334feb3284 WHIRLPOOL 1a5b8e148fbfb2d7e67e18f64f15f560fe421e0f32d7f416ceea30a4b318f5078506d755df487be83032a7eb3279ced716a4122c215d5aed1bf69816f3a53f9f
 EBUILD 2mandvd-1.8.4.ebuild 1470 SHA256 717ab8b3876ad4eb7b39d44e0a83989184bc965763d2ce021ad3e50dc2c2777c SHA512 4aa7083aa9069c5c742013383d7464b0326df0f9b1e0e084077ceb9a74ab58de57dccedf81fe3da430f7108335206703331e5e6bee27411ef1290d21e771e4b8 WHIRLPOOL 15ce9a44878fede680d300e1769c3ae6149a2c4b961bf272a99c8b72b77059db4c0a47374d94d01b0fb074478fe1b132b7a6aad5395bdfb6919271c7ecba520c
-EBUILD 2mandvd-1.8.5.ebuild 1461 SHA256 620b733082fb2c8b3db2c601407b1e12d0227a985b60246204e219794997381c SHA512 6d69c140fa07a7cd4411eef9cea41527ba0d54be669629be6e26f2dec87706d2a200758aa65e697b5440a3bf9376bd41430aee146541128dc107a310b3ee2b35 WHIRLPOOL c1a17fc3d3dc244340cb1173ef3a948918c2c507fd7eff991d1db8722e21e5c596af8e262dba8eb86eb87936d9524d55af39d64bf55aa83c02225afa70472b0c
-MISC ChangeLog 5310 SHA256 d950a7c151d7a7c18d0ef5099ae7ad2d794f816d3725ee5a740c856105a458d0 SHA512 277912d411e8fd76b04a0a31a2754d5fc326a9678428c61eb5ec99cf1182ff01a85bf5ff05c021fc0bf1ddc78b7677fee0e77b7f5ba99dbbcfa528ec732e8de9 WHIRLPOOL 2dcaeeea697ea2b3264c3a779759e84a9327f664165bc831214dce92b010f38a61dbbc55bd0efee28e679839994e43c57af4b29a1a8a26b756383f85d62426aa
+EBUILD 2mandvd-1.8.5.ebuild 1519 SHA256 e539331b555ef5791313337e6a61247011c65c5ac6f51ccc496098ccdbe3b8aa SHA512 17229203346e6d134d64b8a92423c06ba13c80376495516e9bcf83d7c0dffc8c0b91209886473d650f0165e2bd9a5ed3e12137ba926af10f3f6550c8d3f7c8f3 WHIRLPOOL a0293e2413b306a0de5ace374337ad7e9c2a90bc6b7f0cdee78e81e6913500803697835e60a1677d6642773cf7bfa213f4a2bfd3545e58059feddb493b3494a2
+MISC ChangeLog 5426 SHA256 f72216607b635ff16a1b639883adbcace763b6f97f9f49901373c79a9ab91661 SHA512 57d05bfcf052686925843d5bb5736c40e66fe0cbae387f91781f7b4bd7774219f500ab2f924f79b7c6389edf8ad57b8fcf0e6c9e47945027624e048434c2a447 WHIRLPOOL 4e6571bcb253698eab3c645699375f5c641789bd7cb226a59ac9035212bed57961e2435b765f0ef3d81683bf38f9b5975201bb1ac392dc414f6ac51175df16c8
 MISC metadata.xml 155 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7 SHA512 f05c8982778167c3667c9246b9730ba49fec2967731ed2c615e31a7fddc220fcea8c0843caa70a14957c8c4910892c512b6f2e00a9724d65e6032e1289f4562a WHIRLPOOL 25ccd49f04da07c8525fe18b21229764bb4104938abefc6c953bf9caa533dd5c10ae7b3f80a1251182e6c1520c09383d9f1d0ac1dc74832a99299c9be27406c4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJSIakbAAoJENXLsxwXqFxye0MP/25t3QGEkjSJdRrfiHs2JO5d
-zUvD3/wxG6bE7UPY+92j93wADec9t+CpY08veUKTbBWfs1EZaL/Q5hHWCrwriSVu
-ngKBUjd5cPtaubr2yjyD2n6czw2p3ZiR36Jw2L0DFotpb73/vj3HRjv8AukJyRYq
-rmXsMGDj2dBTsvVJrKI3M9z0zkqRk/Hz37eXFW2Y4ZGD/8NlOTXgFj+YieNf73Zx
-FNeaDeb/ypoGMEo4L050zxj4jFqwz0XNKxCyw86EBrpz5CfFpzyrWl6Fs+uidaFF
-IlhscpOdGEuKEflLhX8g9ezAgWaskP0x9liGox9aNs63LRC4681tSi0dnkz7jwKu
-ogFsmbQMvvNxq79n3L4tJDMafZYqfS8rJ4xdggTMOC14yfN3KQwkJ+QI9uh2xLAS
-ZmOc8uEXw792C2XvGPQmLJevTv1EmqAUHlcV5noIih7Vv5xpABAnT8/jUns0EODv
-eqTcl1BIOoxI2Bo/H6ow4MSSZoncE8tUbD+paQugUwOdHZW/tV6dKmFknEfOnorC
-+ImrM4GONEIo+2MW4hwU5kGM7p0BdsYqCfwQqoXQIld2Z+yYkHP9tPO96h+K9vFu
-dzQqpJy25fK1nhhV1DAwaHKFx7XB+EwsVdT6vSJjNAqMvuNXZvfvXyWaa1VuVoig
-CoW2dvdqrxRQNZFG+bDX
-=g/FK
+iEYEAREIAAYFAlVPRUcACgkQCaWpQKGI+9RDBQCeMuVL7nON23tujQExwQDWqNUx
+fAcAn3Ah99GZLkaaUqSNHom7nPjOwnjM
+=fKD6
 -----END PGP SIGNATURE-----
