@@ -6,15 +6,15 @@ AUX vdr2jpeg-0.1.9-ffmpeg.patch 13036 SHA256 7e476ffb59c6ee464360ec8ad02413da5b0
 AUX vdr2jpeg-0.1.9-ffmpeg1.patch 8787 SHA256 4865aa2d9a9df25edee5dd270beeb9b0575360239a0720ce0bf346e52880d49a SHA512 d7ab3a5d5dff70d914036da98c42fa6931e71f54b88580bcfac84a81a2c256811d8c59e25b55e3bf3f2cfed1d6c3997c68e24b81b9d5ac7bc0c13b97693a5ee3 WHIRLPOOL 2b70797f0b25dc52e07e397d8217105d860f279106c37c4b42c365c27394773d27272fc5fe8f383b1db64597d44d5bedaea7c0d88980a615d59daab165265b88
 AUX vdr2jpeg-0.1.9-libav9.patch 2072 SHA256 aa491d377f6773faec0b42f2a7304af326ccde4bd13dcab85d10eb216020c65e SHA512 d8122499f7f5db79f359bd38801fcc3b72b9ddce1305a854260d40d6f55e2162fb1a23b2a8acd3902c3a93aab1ee66bce418fcd6f5ad72363d98c4bf5f68400a WHIRLPOOL d911dabc8f4a37a80d1d8acfeb10b19a547364235a60b066d2a7e020056aa078d0f51fe5cbdece0a9c385d4212bfce43e3afa6dd9fb020e50f3218ca11b9705d
 DIST vdr2jpeg-0.1.9.tgz 31160 SHA256 869250e411def669aa89170ceff6bfbfd08c522bee9a8967799b4af60010ea79 SHA512 e2309fd08591d5efa08246c2ecde70811036ea293e21f7e5ae989af5acef5e795216cbc31455d2f0b65de575a876863efe55ddf4397ab4eadf3d67a627579d99 WHIRLPOOL 1009060f15563d1b0c4d75f2e965f188efcc021cb28a12a7750096b2aa32e5d83fc8601b6246f29c35f87df39b1cf64f34be180b13275442a80d38301a3e03b1
+DIST vdr2jpeg-0.2.0.tgz 20027 SHA256 988f19c5d84e345ad5cc2beab55570d340495c54b507d83ff0b9c5d3e01e7356 SHA512 65f3e0acb2ecd3a5341e527c45fafd454266841f1369c89b10750fce86f2326fba76329abd17a05d67aea3b43a7b1299a49cfa9eee9a784bb99c940253ca5952 WHIRLPOOL 614ddabbbac0306aaa2c0d16e06b2407b646ab08f4fae22913c875954ccad48c4c237d0a04391bb003561c28a7b95175548ebd45cb25d41dfce611985dc1bd93
 EBUILD vdr2jpeg-0.1.9-r1.ebuild 1037 SHA256 ffa5a9bfed0ed558b4877711bdf59eddfddbe71747f6b33ee062baf10b6a7cd1 SHA512 f9bbc92a915de02467c347c821a2b03624b9aa487eb3bab65959aa8bc390d89aec1a029f000a4cb9d0e793924c81a4626b472c4989be9c21eacc0e4e9ddcd59c WHIRLPOOL 487b97152be0b34523acd77c2780dde4a273b58faad892ffeda5bf038e75ef2f21ee46fd6127da652c0a65629d5ced8910bc42c75ff1324c35ad41cbdc019495
-EBUILD vdr2jpeg-0.1.9.ebuild 939 SHA256 203ef6fc9d432ca6b271f753e6ab902f85023b36cb080e28f9d14c1d075c54cd SHA512 0f0ccbb230480894b807ec0d0ecd6457c771f85e06cacdb55641ffec41a4920a6c8a6e3186cf478f8c92ec08068ec885ee897ada933e8b968a976dd875ef21b3 WHIRLPOOL 6cec1abce651022c6838c796b03226b5fbcf1127b6b42ae7e8368a1afb2e0b2fec49f41bc0ae5af299a13f9e660a9c4f628fc1bd4b10d13e8519dc2865dcd314
-MISC ChangeLog 5604 SHA256 009f21a078cf031f4d5e771c11d0b3597d6967c1f4b087127c00b62347bf2e74 SHA512 1d0461519a15ce6113dcc71dcb27c303680b2c7b58f6ac001047cf25f6ce6c3c3eecf802fcf6f047ceb5fbb7bf60328191db28a2309ccdfd0f16555c184e5840 WHIRLPOOL 47df6012fc48f233b01db3354879b941c2268cf617e236c6691ba3c8d256eb544c1aa82b0d78b188f31becbe24c395c4d099d4c251486583c38647d1c3983e00
+EBUILD vdr2jpeg-0.2.0.ebuild 1013 SHA256 0a75228cb6da41005db61fd4c3f47166a628d444c5165c7fcf96388c712f2626 SHA512 99908ad4190fef9daf4b4332897f5aba29f544881bc92effbcf3fac9aec407643cd6ab4e9f8c643109611d3e99fe570deeff1b9169102326583905b2b1961c14 WHIRLPOOL 271a60211b1f28dec63a4a7980dbe48a1ef39d055f895c63191accac436503906b9ff470e58ba36f6ef43ffe486b122c290e87b5da2d0178b32382d457d2c6a9
+MISC ChangeLog 5743 SHA256 2c5ca7cee03938037c7ae1a5f1c8ed5a07abd56d0bb165671dc1b4bc385de7f7 SHA512 eaf0dbdc6e7fc159e7465337fc0b59f41705c5d0c8344d327002f1018b95a64d3aad767223c797613a0d0afad5eb0166b1daa427668a0d737aabd2c06ad9ad31 WHIRLPOOL e66b52a6bf5216fbec515a67db3c7f18739181dda63081e9d44b21d1ed60f93aca3b38fd092dbac733639096b4c1a9abc9fc605a1eef24dd2c3a2c32ad0b688d
 MISC metadata.xml 419 SHA256 da5fe630b58a0c3d2bc786901eda3cb8c875db655389a608438a6af30fa7a306 SHA512 4de6439a4b9718af0ea2edd72451165180c94202c07b43ae193d7dbdb864e5b1560cfe96fcb6b732e5304df920e89c0dfe1c448f9c617d0e4201486fe1dd0e45 WHIRLPOOL f033c8874817cba8d7edfee65f01ffdbc4fbd9f9a7a28f35902c5e7ce412e9cb069c621830cf610583edd2f9d3baad0435cfa41dd3d7aad4e0bfbb9f2b3c14b9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
-Comment: added by hd_brummy@gentoo.org
+Version: GnuPG v2
 
-iD8DBQFU1SNJdn07HTTCgIoRCJb1AJ96YUkZr31wD0CbPVDcf3nEJxOXdQCfbR3k
-wFtLyDis/o11jCiF0xH4FKM=
-=AsXz
+iEYEAREIAAYFAlVPR6IACgkQCaWpQKGI+9SqKACggSZ6hqrPBoIPQmqVFtuWU0rU
+7XEAn0bSkiauoH3bZxJtrtdtkD/7Iv1G
+=WQF0
 -----END PGP SIGNATURE-----
