@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst prepare unpack
-DEPEND=media-libs/libsdl virtual/ffmpeg virtual/glu virtual/opengl dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtopengl:4
+DEPEND=libav? ( media-video/libav:= ) !libav? ( media-video/ffmpeg:0= ) media-libs/libsdl virtual/glu virtual/opengl dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtopengl:4
 DESCRIPTION=The successor of ManDVD
-EAPI=4
+EAPI=5
 HOMEPAGE=http://kde-apps.org/content/show.php?content=99450
-IUSE=debug linguas_cs linguas_de linguas_en linguas_it linguas_ru
+IUSE=debug libav linguas_cs linguas_de linguas_en linguas_it linguas_ru
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2+
-RDEPEND=media-libs/libsdl virtual/ffmpeg virtual/glu virtual/opengl dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtopengl:4 || ( app-cdr/cdrkit app-cdr/cdrtools ) dev-lang/perl media-fonts/dejavu media-gfx/exif media-libs/netpbm media-sound/sox media-video/dvdauthor media-video/ffmpegthumbnailer media-video/mjpegtools media-video/mplayer[encode]
+RDEPEND=libav? ( media-video/libav:= ) !libav? ( media-video/ffmpeg:0= ) media-libs/libsdl virtual/glu virtual/opengl dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtopengl:4 || ( app-cdr/cdrkit app-cdr/cdrtools ) dev-lang/perl media-fonts/dejavu media-gfx/exif media-libs/netpbm media-sound/sox media-video/dvdauthor media-video/ffmpegthumbnailer media-video/mjpegtools media-video/mplayer[encode]
 SLOT=0
 SRC_URI=http://download.tuxfamily.org/2mandvd/2ManDVD-1.8.5.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=01bd0c1d33e8cc8fefb5aa6136c77d5f
+_md5_=25ceb02f9071a88b81e9b6e827711ad1
