@@ -1,13 +1,14 @@
 DEFINED_PHASES=install prepare
-DEPEND=virtual/ffmpeg virtual/pkgconfig
+DEPEND=libav? ( media-video/libav ) !libav? ( media-video/ffmpeg:0 ) virtual/pkgconfig
 DESCRIPTION=Addon needed for XXV - WWW Admin for the Video Disk Recorder
 EAPI=5
 HOMEPAGE=http://projects.vdr-developer.org/projects/xxv
-KEYWORDS=amd64 x86
+IUSE=libav
+KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
-RDEPEND=virtual/ffmpeg
+RDEPEND=libav? ( media-video/libav ) !libav? ( media-video/ffmpeg:0 )
 RESTRICT=strip
 SLOT=0
-SRC_URI=mirror://vdr-developerorg/717/vdr2jpeg-0.1.9.tgz mirror://gentoo/vdr2jpeg-0.1.9.tgz
+SRC_URI=mirror://vdr-developerorg/1911/vdr2jpeg-0.2.0.tgz mirror://gentoo/vdr2jpeg-0.2.0.tgz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=6e9e42bef2e78b18902611bb3ca3cfcf
+_md5_=1a6524056d92c9ce31f2e67148e919ec
