@@ -4,7 +4,7 @@ Hash: SHA256
 AUX axhttpd.confd 181 SHA256 5eff31a8656c735ec9b85eac8d0a92c497132d5337fd5dff6f9e311e6b223a65 SHA512 319cbe1c8121f00eba310bce664ba67828964572e53e1290804a28d7dda8e017ace27ddbab78248d0935d4e8b2c6321b8294befc99a29f5e949333718516b0b7 WHIRLPOOL c70ac3f443e0a1fe9c25af2db6d8703bcc7d2d78d135de024f5687bf9667528e3f5fdbca90c3f8ab8867d11af02a33a0d8e1b9a6446e3be547b0e785c7dd33ec
 AUX axhttpd.initd 625 SHA256 90a816f0807478d02e4b74d8532e3deda8cfe844980dadd8662e1969acf7217d SHA512 5a7d86db4b9ac1bd6b2c59dbb9ee4f1c92b67ecd5426bc76b59f1092437c8582cfc3c50da267797242b221f481e8848142246334b8a28c330d954d58e96e10cc WHIRLPOOL ec9f2f230616a402f68a39a03594aa0be0239d7f21e9f48ea31c97874b2ef240acf40196304e39e59cef65917f5961bbeec7813525678d00216e4b0fb316d6ad
 AUX config 3064 SHA256 e85c8bd84f34045b52cefc7e3df94373f87cab22d495efe7ca737b1e6cfaa7ed SHA512 6589e3912ba9231db660b8afe71a6e233807108a8662860667dcae3b6cc4d77fa405503d6eb9d520669cd26fb67f418095b6174b88527c290818fc6400cb65b0 WHIRLPOOL 603b5913eab935d978e48fb36e2178323e3e6ead479a09ae0317ec1ff5c2bf7bde83c66e7965a7a8423ab9c4cce37e8aba44f1eb7e2329d38dbe31a861ec78e3
-AUX explicit-libdir-r1.patch 1568 SHA256 d8165742b4e951789617803eeb2dfceb6557c249c1c259d1a9fbe237c35f3517 SHA512 d1dfae1bc015daa2435973930afab6ae6a52e8d3b2709771863d9a5266adfee9fe4cebb91454c9f4168844f9567eb86ae3b2531c9bff3f74286de9f2eea15992 WHIRLPOOL 91de6d8f2956832b936ad897b187a27dee15c03b96faef79117d43552e501ccb0d56f5a0714f597ee899638dce051b794cb5ca28954a81b0cfe7c5b133c7f42a
+AUX explicit-libdir-r1.patch 1578 SHA256 82e5b1d5efd48f4fbd30c4bc41b3673526bd982c050f1756d6146483bd2770d5 SHA512 8e10b10eb6959e309e504a0ff2c16795e258f0fab57b97ffb3b64a6c3b84de8e782cc1697983ed7ff0a05a211e43146ecf39588782e8d3c813a4aa053d94557a WHIRLPOOL c0ca0eef64220941c7917a732505147c3a86f79fb6cf1d2817eb4bea0038df976f73cbf4fda372030fb6a6493c852158a34d9ae7444dc1d4e2fe92612607141c
 DIST axTLS-1.5.0.tar.gz 1302393 SHA256 7ff27d1eb1ad1630e1a3431278d72857c1124edd9a15a07a79709bc77d8bb710 SHA512 526e3c408c960e7e48dd791c6cf94a3dbc62a36c0453e4705529490160cacd5ca1c663fab153a899618e78516714e3afb7a93dae075d2717eb9a91e63f3e9c04 WHIRLPOOL 5fc0e9f4d3f8994dc2909f85261aac538b9563b3dee787d8d6a0942f087041893217a0b9237d5c0824c3a64bb8272bb30d2c4fcdbd11a879107f20892c8f180f
 DIST axTLS-1.5.1.tar.gz 1305575 SHA256 860a2754c497109854889e78eb2efdf00661f3b5dbb5e130bd5d8441a2f6ea50 SHA512 4b35e151d222496f5e4ab9c849ca9b14a245590a07f07132eab2fa633dac4cf7abfe29344f643fa182c9c443a139d3230d4b3554d3ff0932410ab36ae3666d92 WHIRLPOOL c1072aa94a7916db38d26902bac175d17e4f8fe1a431956d0b366f9cd913c89c145d119c823d9c1bfa51d54aa191ca43386b4312bea3a16f61d9df4ff2eb6b68
 DIST axTLS-1.5.2.tar.gz 1309632 SHA256 c4568cdf3e326c6fee2d7d16b4e13e05a29cecf49c1774c7858fe83cde01f8bb SHA512 138c1134c949fb85335454907c8fa74f18860d16371aba7d4d46faa4fb0e9cbf41d259cf72389f439d8d6436dc200951001a53e996793ba59254f5ddefe99999 WHIRLPOOL 36b889c4aa5e3c2c0da20a189ec7342db86b757acbb5c9c8a12262d95ceabb490ac97fa608efd66757e74e6347e0f5ff5bd5c76ac453d9dbdc115c45b8e35ad4
@@ -13,22 +13,22 @@ EBUILD axtls-1.5.0.ebuild 4763 SHA256 607587dfabb530771e1b0f1c7d857296014dafa157
 EBUILD axtls-1.5.1.ebuild 4764 SHA256 3b0c19549c03f7b775907745978dec8d8572d4574c963811e3f77edd3038860a SHA512 630eabe1b52c2d0abb24c80240c9547f25a02c82cde15e0055a3e6c56146a435b40e4a2a92e8daeb36a64def7c3ee896ac4bc2b7ea56793d867b7811c205f8ae WHIRLPOOL f51824cc661a8a72f2744c0d4cf3c8a17a56d15cf08a56619ad5869a10a94a7eb1e82e3055ee6f32cce42ff5510578a8014c850c32bff2c7936bd1fbea0b0dea
 EBUILD axtls-1.5.2.ebuild 4774 SHA256 ad1c7adceb7b52ca1558a897730427214a9ccfb00f4fd39a3c0411f8039a7093 SHA512 5ee170d66c8878c06325240757a3818dc4723a1550e4c81364dfeeb01e5ec5280c6c503e620317792938c93305a14e50aae99fd84f860e13778bb6c36af92bbd WHIRLPOOL fc6d89b7cac7217c7fa2f20598fb31af9494ad3cb97d367bb4ccfc6537fd49cbbf66653ce0ba4fc9730b427bb6f80aefbe53e028ab91b90917ec1943c0a76f1b
 EBUILD axtls-1.5.3.ebuild 4774 SHA256 e203d7d412cc8d81f82bfb89e0b9ad3a388b96ac06a6b4f2f9e4f2e3b2b4e699 SHA512 50227c5aaf5ecb89e8cf57d096648809aebd9392edff085434cc428db64e91d5f48a926d043b1164d9eae2753143ab207ae67aa48e9c8cf69fa2060c0a131ac5 WHIRLPOOL bb75e8d5c08ab3d278e675d8ea90d909fda758f35fa768a5a72cbe41ab82e32fafb76515f7abbe2be3e5e0f28eab5a9422bcfbc11cc8a844ed49eb2815bff64a
-MISC ChangeLog 7107 SHA256 05b479895ce7619d764ff209f1c766c38131a6c41e62309033d823318dba75c1 SHA512 5db7081ea453b62a33f7c142529522ee3ad64e15086222a7552ec20aab34c77ce42d31697fe8a5c3686030cce8f99932979b87135bdf6dd756e4d1846577d31e WHIRLPOOL b732e52f824fede6d4c82aa3ed5a4be462305175ddcdfbe30fda645c8887a8570a67feca9cf4b005cb76e1bb8abbe81192dd895e3342e7e72ccecc26c6ba7064
+MISC ChangeLog 7216 SHA256 b13942462f2b3740e6b6a4c32b279e12ca8a6c91e9339b34f54df05bf0ffda29 SHA512 dc50e4025b12185a46b20ea010b8ce56e7f472073bf8c494f1366da07c6729518b37e5716c416dcaa8e6826fbab00bf462517494eb02640f7b7973f4326d581b WHIRLPOOL c688c4fa984119b0e93efbf89e704931caeb09c3f608f98cb63421e958c788b8ebd12a0ff57e3e1c34a1981ac35f33fb625a7a66372c4e9710ea7272591052d0
 MISC metadata.xml 539 SHA256 678ce846bdfbf9df350ed0ba25520abe1588a12c229cbc54642269cf2fbe0966 SHA512 66019369788d013f2b9f541affea0e528ff544606ed19b5faaa1ca8c9681c05321ca0505ad98f120490a500cf9fb9bd5d659958d3666b766c74edb242c3913cf WHIRLPOOL a5a2f029e4b06b6f3dd7313182da640ae698ad5de07a4a4a4175b07966b67150cca8f98591b000c51b97596f99a4761f7969322a97c127305b73423726461a4b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVRkXlAAoJEJOE+m71LUu68o0P/1ujcpzQYJblfvVNX+DPx4oL
-R5RPSBTVuauM8PHDOu3OMgwubeCdPoPWIpEfBBZDL5kYLOVuXe7iRO4LKT3520wD
-kFpek2H5SavnmYNZvBQSvj9Xic96EsMWhavIMLtQHgIFKfpPayUOTQXRhFufrrWd
-JFSixmAnEifW5rrHANz527l0U8znzRdRSSsshjRPqkg/cG8LUMH0+tnqMa8zNlU9
-HqBgFqXTBwVWgx2JFiMA0u2cTcXjfIcAvCMA56HSkc4yegPGdoK9QM860fNVRgZt
-kSUgPdDK1Ardqso81zzkXeYbQuuEE6Nwzet7jw9ZP5/GbWIIOsqOp6JxwXAgKFBo
-APOgRYTS/9xKgVGF+5AqZrHTjQtbN7B8lWtCAOE6EEpZWEkcEfdNaAb1GRd7sCbC
-iJEDkPJs0a4igSgyc++48p8/cdCizpOwG9fPAGmA21vQtQTaLBE4iX3mc78viAoQ
-ruDfulokSTtpM7OfRGi5ZvixH9hFYIGtl83DZjfGjLNY9V/2Q1XewvpH+m1D7sP7
-+bkAS6nMjkVNGX8v8HMopahcyXPV4sQDXS5ap4XQwtJ6V4/wt0iRfmDWYJKp65av
-QbOA6ZeE4Y3hhMpTjHHbPrRynhbzwQMIRS+/fbszTzBcAoV5txHKOsjeQunLa47C
-I8jQnJefsI1C45diIQrX
-=/vzq
+iQIcBAEBCAAGBQJVT0bQAAoJEJOE+m71LUu63UEP/1NMHSLuC6TX51nwyf5HSrAh
+vNuMEa3X/Ym6hf/tz1XN6HqjhXInzHrI4Tb0J6urT4f7bKse3IBR/YlrOOcth5eJ
+J0vzNQngEs0i4wEq1X4lxo53MmBMt4IF1pUlcezTn4YFQhEurJY7oNsQEWLRiqfB
+UYQ7Bvm+87mJx0R7ks3hy7hQUJ84Yv1A1f9Q/feR/65/etkkytiDvsmuHRUW0sFj
+TOfSOohv22XogXQ3eb5oMcIdqtmDJWt8Md1GezTuZoAfdnFYYOfqj4i7vY8bhh3A
+iyVj+uFjxAInPZR7xNAhk0qg7h+k84whn0IG40HSxK4v5aHwuIc/Kxh5gkdwKXb3
+y5Fe+fKwQ0/AGw6o0yFiMb0dnxhpOJ55O9SA1ZDfYj5uP6VJ7U9PqG2oTJzohLLc
+f4JxnJz+pHUOw7vo3d4noprGApHgfGYO/LrIUaAHMItEnEZZ4sZi23aAg9ThO4Ns
+Guf+oEOn8uQSGJ553f334ipdAcPD7OecWoZKLWVmOO+LrtaRZV72GyXZKZgtzNYi
+sVZ/tFPCjjhGLYuxMyilyW5ldt7E+AmrBFElmnoWgqjXGzBZmHc5ZHV6Z6DoFot+
+ONz27pErTeUXIyHzIwr/FiKCs0ZWWYlUCklGw7JLgFjZ3eQ3VwScZjwwm4hBWruf
+D0UkDBOey3Kup/m994GD
+=GUog
 -----END PGP SIGNATURE-----
