@@ -1,6 +1,12 @@
 # ChangeLog for media-video/vdr2jpeg
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/vdr2jpeg/ChangeLog,v 1.31 2015/02/06 20:25:39 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/vdr2jpeg/ChangeLog,v 1.32 2015/05/10 11:57:21 pacho Exp $
+
+*vdr2jpeg-0.2.0 (10 May 2015)
+
+  10 May 2015; Pacho Ramos <pacho@gentoo.org> +vdr2jpeg-0.2.0.ebuild,
+  -vdr2jpeg-0.1.9.ebuild:
+  Version bump
 
   06 Feb 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
   vdr2jpeg-0.1.9-r1.ebuild:
