@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/axtls
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/axtls/ChangeLog,v 1.50 2015/05/03 15:57:58 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/axtls/ChangeLog,v 1.51 2015/05/10 11:53:30 blueness Exp $
+
+  10 May 2015; Anthony G. Basile <blueness@gentoo.org>
+  files/explicit-libdir-r1.patch:
+  Fix bug #534614.
 
   03 May 2015; Anthony G. Basile <blueness@gentoo.org> -axtls-1.4.8.ebuild,
   -axtls-1.4.9-r1.ebuild, -axtls-1.4.9.ebuild, -files/explicit-libdir.patch:
