@@ -1,6 +1,9 @@
 # ChangeLog for media-video/2mandvd
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/2mandvd/ChangeLog,v 1.32 2013/08/31 08:27:16 pesa Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/2mandvd/ChangeLog,v 1.33 2015/05/10 11:47:18 pacho Exp $
+
+  10 May 2015; Pacho Ramos <pacho@gentoo.org> 2mandvd-1.8.5.ebuild:
+  Migrate to new-style ffmpeg/libav USE flags
 
 *2mandvd-1.8.5 (31 Aug 2013)
 
